[gd_scene load_steps=2 format=3 uid="uid://dj4chulm8xwfj"]

[ext_resource type="Script" path="res://game/GameScene.gd" id="1_game_script"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_game_script")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
texture_filter = 1
offset_left = 1.0
offset_right = 1279.0
offset_bottom = 720.0
stretch = true
stretch_shrink = 3

[node name="GameViewport" type="SubViewport" parent="SubViewportContainer"]
snap_2d_transforms_to_pixel = true
canvas_item_default_texture_filter = 0

[node name="LevelContainer" type="Node2D" parent="SubViewportContainer/GameViewport"]
unique_name_in_owner = true

[node name="GameCamera" type="Camera2D" parent="SubViewportContainer/GameViewport"]
unique_name_in_owner = true
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 12.0
